--- a/app/views/index/index.jade
+++ b/app/views/index/index.jade
@@ -53,23 +53,23 @@ html(ng-app="TemplateDemo")
                                 li(ng-repeat="theme in currentTemplate.themes", style="background: {{ theme.color }}")
                                     a(href="#", ng-click="showTemplate(currentTemplate, theme)") {{ theme.name }}
 
-                        li
-                            a(href="#")
+                        li(ng-class="{ 'disabled': !currentTemplate }")
+                            a(href="#", ng-click="resizeTo(320, 480)")
                                 i.fa.fa-mobile.fa-2x
-                        li
-                            a(href="#")
+                        li(ng-class="{ 'disabled': !currentTemplate }")
+                            a(href="#", ng-click="resizeTo(480, 320)")
                                 i.fa.fa-mobile.fa-2x.fa-rotate-90
-                        li
-                            a(href="#")
+                        li(ng-class="{ 'disabled': !currentTemplate }")
+                            a(href="#", ng-click="resizeTo(768, 1024)")
                                 i.fa.fa-tablet.fa-2x
-                        li
-                            a(href="#")
+                        li(ng-class="{ 'disabled': !currentTemplate }")
+                            a(href="#", ng-click="resizeTo(1024, 768)")
                                 i.fa.fa-tablet.fa-2x.fa-rotate-90
-                        li
-                            a(href="#")
+                        li(ng-class="{ 'disabled': !currentTemplate }")
+                            a(href="#", ng-click="resizeTo(1440, 900)")
                                 i.fa.fa-laptop.fa-2x
-                        li
-                            a(href="#")
+                        li(ng-class="{ 'disabled': !currentTemplate }")
+                            a(href="#", ng-click="resizeTo()")
                                 i.fa.fa-desktop.fa-2x
 
         // Templates
@@ -158,7 +158,8 @@ html(ng-app="TemplateDemo")
                                 button.btn.btn-primary(type="button", style="margin-right: 20px;", ng-click="filter()") Filter
 
         // Frame showing template demo URL
-        iframe.tpl-frame(ng-src="{{ frameUrl }}")
+        div.tpl-frame-container(ng-style="{ width: w, height: h, marginTop: t, marginLeft: l }")
+            iframe(ng-src="{{ frameUrl }}")
 
         //if lt IE 9
             script(src="/vendor/jquery/jquery-1.10.2.min.js")
