--- a/public/asset/css/style.css
+++ b/public/asset/css/style.css
@@ -1,8 +1,10 @@
-.tpl-body .navbar, .tpl-body .nav {
-  height: 59px; }
-.tpl-body .nav > li {
-  /*border-left: 1px solid #e5e5e5;*/
-  height: 100%; }
+.tpl-body {
+  background: #2c3e50; }
+  .tpl-body .navbar, .tpl-body .nav {
+    height: 59px; }
+  .tpl-body .nav > li {
+    /*border-left: 1px solid #e5e5e5;*/
+    height: 100%; }
 
 html, body {
   height: 100%; }
@@ -64,9 +66,13 @@ footer {
     margin-left: 15px;
     margin-right: 15px; }
 
-.tpl-frame {
+.tpl-frame-container {
   position: fixed;
   top: 58px;
   left: 0;
   width: 100%;
   height: 100%; }
+  .tpl-frame-container iframe {
+    border: 0;
+    width: 100%;
+    height: 100%; }
