--- a/public/asset/css/style.css
+++ b/public/asset/css/style.css
@@ -76,3 +76,21 @@ footer {
     border: 0;
     width: 100%;
     height: 100%; }
+
+.tpl-loader {
+  background: #2c3e50;
+  position: absolute;
+  opacity: 0.8;
+  top: 0;
+  left: 0;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1000; }
+  .tpl-loader i {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    padding-top: -25px;
+    padding-left: -30px; }
