--- a/public/asset/css/style.scss
+++ b/public/asset/css/style.scss
@@ -101,6 +101,23 @@ footer {
     height: 100%;
   }
 }
-.tpl-tag-list {
+.tpl-loader {
+  background: $bodyBackgroundColor;
+  position: absolute;
+  opacity: 0.8;
+  top: 0;
+  left: 0;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
 
+  i {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    padding-top: -25px;
+    padding-left: -30px;
+  }
 }
