--- a/app/views/template/edit.jade
+++ b/app/views/template/edit.jade
@@ -32,6 +32,11 @@ block content
                         input.form-control(type="text", name="name", value="#{template.name}")
 
                 div.form-group
+                    label.control-label.col-lg-2 Slug
+                    div.col-lg-6
+                        input.form-control(type="text", name="slug", value="#{template.slug}")
+
+                div.form-group
                     label.control-label.col-lg-2 Demo URL
                     div.col-lg-8
                         input.form-control(type="text", name="demo_url", placeholder="http://", value="#{template.demo_url}")
@@ -132,7 +137,7 @@ block content
                                 div#thumbProgress.progress-bar.progress-bar-success(style="width: 100%;")
                         div.tb-tmpl-thumb
                             if template.thumbs.original
-                                img(src="#{thumbPrefixUrl}/#{template.thumbs.original}")
+                                img(src="#{thumbPrefixUrl}#{template.thumbs.original}")
                         input(type="hidden", name="thumbs", value="#{JSON.stringify(template.thumbs)}")
 
                 hr
@@ -208,6 +213,13 @@ block footerScript
                             }
                         }
                     },
+                    slug: {
+                        validators: {
+                            notEmpty: {
+                                message: 'The slug is required'
+                            }
+                        }
+                    },
                     demo_url: {
                         validators: {
                             notEmpty: {
@@ -230,6 +242,26 @@ block footerScript
                         }
                     }
                 }
+            });
+
+            // Generate slug based one template's name
+            $('input[name="name"]').on('keyup', function() {
+                var name = $(this).val(), $slug = $('input[name="slug"]');
+                if (name == '') {
+                    $slug.val('');
+                    return;
+                }
+                $.ajax({
+                    type: 'POST',
+                    url: '/admin/template/slug',
+                    data: {
+                        id: '#{template._id}',
+                        name: name
+                    },
+                    dataType: 'json'
+                }).success(function(response) {
+                    $slug.val(response.slug);
+                });
             });
 
             // Init data for rows showing uploaded files
