--- a/app/views/index/index.jade
+++ b/app/views/index/index.jade
@@ -5,6 +5,7 @@ html(ng-app="TemplateDemo")
         meta(http-equiv="Content-type", content="text/html;charset=UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge,chrome=1")
         title #{provider.name}
+        link(rel="icon", type="image/x-icon", href="/favicon.ico")
         //link(rel="stylesheet", href="/vendor/bootstrap/css/bootstrap.min.css")
         link(rel="stylesheet", href="/vendor/bootstrap-theme/css/flatly.css")
         link(rel="stylesheet", href="/vendor/font-awesome/css/font-awesome.min.css")
