--- a/app/views/layouts/default.jade
+++ b/app/views/layouts/default.jade
@@ -4,8 +4,10 @@ html
         meta(charset="utf-8")
         meta(http-equiv="Content-type", content="text/html;charset=UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge,chrome=1")
-        title= title
 
+        title #{title}
+
+        link(rel="icon", type="image/x-icon", href="/favicon.ico")
         //link(rel="stylesheet", href="/vendor/bootstrap/css/bootstrap.css")
         link(rel="stylesheet", href="/vendor/bootstrap-theme/css/flatly.css")
         link(rel="stylesheet", href="/vendor/font-awesome/css/font-awesome.min.css")
