--- a/app/views/template/add.jade
+++ b/app/views/template/add.jade
@@ -37,7 +37,7 @@ block content
                         input.form-control(type="text", name="demo_url", placeholder="http://")
 
                 div.form-group
-                    label.control-label.col-lg-2 Themes
+                    label.control-label.col-lg-2 Preset styles
                     div#themes.col-lg-10
                         div#themeTemplate.hide.row(style="margin-bottom: 10px;")
                             div.col-lg-3
@@ -45,7 +45,7 @@ block content
                             div.col-lg-2
                                 input.form-control(type="text", name="theme.color[]", placeholder="Color")
                             div.col-lg-6
-                                input.form-control(type="text", name="theme.demo_url[]", placeholder="Theme URL")
+                                input.form-control(type="text", name="theme.demo_url[]", placeholder="Style URL")
                             div.col-lg-1
                                 button.btn.btn-default.removeThemeButton(type="button")
                                     i.fa.fa-times
