--- a/app/views/template/edit.jade
+++ b/app/views/template/edit.jade
@@ -278,6 +278,7 @@ block footerScript
                 start: function(e) {
                     $('.changeButton').attr('disabled', 'disabled');
                     $('#saveButton').attr('disabled', 'disabled');
+                    $('#progress').parent().addClass('progress-striped').removeClass('hide').end().css('width', '0%');
                 },
                 done: function(e, data) {
                     $('#uploadedFiles').parent().removeClass('hide');
@@ -312,6 +313,7 @@ block footerScript
 
                     $('#uploader').removeData('editingRow').attr('multiple', 'multiple');
                     $('#saveButton').removeAttr('disabled');
+                    //$('#progress').parent().addClass('hide');
 
                     if (editingRow) {
                         $('.changeButton').removeAttr('disabled');
