--- a/app/views/template/index.jade
+++ b/app/views/template/index.jade
@@ -10,7 +10,7 @@ block content
                 a(href="/admin/template?year=#{year}") #{year}
 
             span.pull-right
-                a.btn.btn-link(href="/admin/template/add")
+                a.btn.btn-default(href="/admin/template/add")
                     i.fa.fa-plus
                     | &nbsp;Add new template
 
